--- a/CroppingTool/index.html
+++ b/CroppingTool/index.html
@@ -7,9 +7,27 @@
     <script src="lib/winjs-4.0.1/js/base.js"></script>
     <script src="lib/winjs-4.0.1/js/ui.js"></script>
     <link href="css/default.css" rel="stylesheet" />
+
+    <script src="js/lodash.js"></script>
+
     <script src="js/main.js"></script>
+    <script src="js/errorCrop.js"></script>
+    <script src="js/workingCropCode.js"></script>
 </head>
 <body class="win-type-body">
-    <div>Content goes here!</div>
+<div class="page-wrapper">
+    <div id="drop-error">
+        <div>
+            <h3>DROP FILE HERE</h3>
+            <p>this will error</p>
+        </div>
+    </div>
+    <div id="drop-work">
+        <div>
+            <h3>DROP FILE HERE</h3>
+            <p>this will work</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
